# lem-in

./: 1.map  2.map  CMakeLists.txt  Makefile  lem-in  lem-in.h  lem-in.h.gch  map  map10  max_map  t.sh  test  test_valid  test_valid1  test_valid5  test_valid_segfault  tmp  visual.py
bra/sources/: find_room.c  lem_in.c  parse_rooms.c  validate.c
inc/: lem_in.h
lem-in.dSYM/Contents/Resources/DWARF/: lem-in
libft/: Makefile
libft/libft/: ft_strsplit.c  ft_words.c  get_next_line.c  libft.h
libft/printf/: color.c  ft_printf.c
maps/valid/vs/multiple_ways/: 1.map
maps/valid/vs/one_way/: 1.map
src/: 0.2.read_line.c  0.3.validator.c  0.4.is.c  0.5.hash_table.c  0.5.implement_hash_table.c  0.6.init_structure.c  0.8.dashes_in_input.c  0.9.delete_links.c  1.1.init.c  1.main.c  10.if_crash.c  10.if_crash2.c  10.suurb_flow.c  10.suurb_flow2.c  2.1_parse_ants.c  2.parse_ants_rooms.c  3.parse_link.c  4.bfs.c  5.cut_links.c  5.find_links_direction.c  6.2.deadlock_cleaning.c  6.imput_cleaning.c  6.input_cleaning.c  7.2.print_hashtable.c  7.print.c  8.create_paths.c  8.create_paths2.c  9.flow.c  9.flow2.c  a_main.c  b_init.c  cut_links.c  d_parse_rooms.c  delete_unused_rooms.c  e_parse_link.c  errors.c  f_bfs.c  g  h_find_links_direction.c  i_print_hashtable.c  (+42 more)
