cmake_minimum_required(VERSION 3.17)
project(irina5 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/libft)
include_directories(libft/printf)

add_executable(irina5
        libft/libft/ft_atoi.c
        libft/libft/ft_bzero.c
        libft/libft/ft_isalnum.c
        libft/libft/ft_isalpha.c
        libft/libft/ft_isascii.c
        libft/libft/ft_isdigit.c
        libft/libft/ft_isprint.c
        libft/libft/ft_itoa.c
        libft/libft/ft_lstadd.c
        libft/libft/ft_lstdel.c
        libft/libft/ft_lstdelone.c
        libft/libft/ft_lstiter.c
        libft/libft/ft_lstmap.c
        libft/libft/ft_lstnew.c
        libft/libft/ft_memalloc.c
        libft/libft/ft_memccpy.c
        libft/libft/ft_memchr.c
        libft/libft/ft_memcmp.c
        libft/libft/ft_memcpy.c
        libft/libft/ft_memdel.c
        libft/libft/ft_memmove.c
        libft/libft/ft_memset.c
        libft/libft/ft_print_bits.c
        libft/libft/ft_putchar.c
        libft/libft/ft_putchar_fd.c
        libft/libft/ft_putendl.c
        libft/libft/ft_putendl_fd.c
        libft/libft/ft_putnbr.c
        libft/libft/ft_putnbr_fd.c
        libft/libft/ft_putstr.c
        libft/libft/ft_putstr_fd.c
        libft/libft/ft_reverse_bits.c
        libft/libft/ft_sort_array.c
        libft/libft/ft_strcat.c
        libft/libft/ft_strchr.c
        libft/libft/ft_strclr.c
        libft/libft/ft_strcmp.c
        libft/libft/ft_strcpy.c
        libft/libft/ft_strdel.c
        libft/libft/ft_strdup.c
        libft/libft/ft_strequ.c
        libft/libft/ft_striter.c
        libft/libft/ft_striteri.c
        libft/libft/ft_strjoin.c
        libft/libft/ft_strlcat.c
        libft/libft/ft_strlen.c
        libft/libft/ft_strmap.c
        libft/libft/ft_strmapi.c
        libft/libft/ft_strncat.c
        libft/libft/ft_strncmp.c
        libft/libft/ft_strncpy.c
        libft/libft/ft_strndup.c
        libft/libft/ft_strnequ.c
        libft/libft/ft_strnew.c
        libft/libft/ft_strnstr.c
        libft/libft/ft_strrchr.c
        libft/libft/ft_strrev.c
        libft/libft/ft_strsplit.c
        libft/libft/ft_strstr.c
        libft/libft/ft_strsub.c
        libft/libft/ft_strtrim.c
        libft/libft/ft_swap_bits.c
        libft/libft/ft_tolower.c
        libft/libft/ft_toupper.c
        libft/libft/ft_words.c
        libft/libft/get_next_line.c
        libft/libft/libft.h
        libft/printf/color.c
        libft/printf/conversion.c
        libft/printf/free.c
        libft/printf/ft_printf.c
        libft/printf/ft_printf.h
        libft/printf/multiplier.c
        libft/printf/neg_exp.c
        libft/printf/prec.c
        libft/printf/prec2.c
        libft/printf/print_float.c
        libft/printf/print_integer.c
        libft/printf/print_octal_x.c
        libft/printf/print_pointer_char.c
        libft/printf/print_string.c
        libft/printf/print_unsigned.c
        libft/printf/read_format.c
        libft/printf/substr.c
        libft/printf/sum_char.c
        libft/printf/tools.c
        src/0.1.errors.c
        src/0.2.read_line.c
        src/0.3.validator.c
        src/0.4.is.c
        src/0.5.hash_table.c
        src/0.6.init_structure.c
        src/0.7.write_coordinate.c
        src/0.8.dashes_in_input.c
        src/0.9.delete_links.c
        src/1.1.init.c
        src/1.main.c
        src/10.suurb_flow.c
        src/2.1_parse_ants.c
        src/2.parse_rooms.c
        src/3.parse_link.c
        src/4.bfs.c
        src/5.find_links_direction.c
        src/6.2.deadlock_cleaning.c
        src/6.input_cleaning.c
        src/7.2.print_hashtable.c
        src/7.print.c
        src/8.create_paths.c
        src/8.create_paths2.c
        src/9.flow.c
        src/9.flow2.c
        src/let_me_free.c
        src/let_me_free_lem.c
        lem-in.h)
