cmake_minimum_required(VERSION 3.17)
project(irina5 C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft/libft)
include_directories(libft/ft_printf)

add_executable(irina5
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_print_bits.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_reverse_bits.c
        libft/ft_sort_array.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strndup.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strrev.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_swap_bits.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_words.c
        libft/get_next_line.c
        libft/libft.h
        libft/ft_printf/src/color.c
        libft/ft_printf/src/conversion.c
        libft/ft_printf/src/free.c
        libft/ft_printf/src/ft_printf.c
        libft/ft_printf/inc/ft_printf.h
        libft/ft_printf/src/multiplier.c
        libft/ft_printf/src/neg_exp.c
        libft/ft_printf/src/prec.c
        libft/ft_printf/src/prec2.c
        libft/ft_printf/src/print_float.c
        libft/ft_printf/src/print_integer.c
        libft/ft_printf/src/print_octal_x.c
        libft/ft_printf/src/print_pointer_char.c
        libft/ft_printf/src/print_string.c
        libft/ft_printf/src/print_unsigned.c
        libft/ft_printf/src/read_format.c
        libft/ft_printf/src/substr.c
        libft/ft_printf/src/sum_char.c
        libft/ft_printf/src/tools.c
        src/a_main.c
        src/b_init.c
        src/c_parse_ants.c
        src/d_parse_rooms.c
        src/e_parse_link.c
        src/f_bfs.c
        src/g_deadlock_cleaning.c
        src/h_find_links_direction.c
        src/i_print_hashtable.c
        src/input_cleaning.c
        src/j_print.c
        src/k_create_paths.c
        src/l2_create_paths3.c
        src/l_create_paths2.c
        src/m_flow.c
        src/n_flow2.c
        src/o_if_crash.c
        src/p_if_crash2.c
        src/z_dashes_in_input.c
        src/z_delete_links.c
        src/z_errors.c
        src/z_hash_table.c
        src/z_init_structure.c
        src/z_is.c
        src/z_let_me_free.c
        src/z_let_me_free_lem.c
        src/z_let_me_free_lem2.c
        src/z_read_line.c
        src/z_validator.c
        src/z_write_coordinate.c
        inc/lem_in.h src/k_suurballe.c)
